# agh-dist

./: .gitignore  pyproject.toml
lab1/: client.py  common.py  server.py
lab2/: distributed.py  doodle.py
lab2/recipes/: .env.example  dependencies.py  main.py  postman_tests_conf.json  requirements.txt  schemas.py  services.py  settings.py  utils.py
lab2/recipes/templates/: error.html  form.html  recipe.html  result.html
lab3/: lab-ray.ipynb
lab4/: config.client  config.server  package-lock.json  package.json
lab4/slice/: smarthome.ice
lab4/src/client/: client.js  config.js  handlers.js  proxies.js
lab4/src/server/: IceServer.java  SmartHomeServantLocator.java
lab4/src/server/servants/: DeviceCategory.java  DeviceI.java
lab4/src/server/servants/bulbs/: ColorBulbI.java  DimmableBulbI.java  SimpleBulbI.java
lab4/src/server/servants/cleaning_robots/: SimpleCleaningRobotI.java  SmartCleaningRobotI.java
lab5/src/client/: main.py
lab5/src/server/: calculator.proto  cmd.txt
lab5/src/server/src/sr/grpc/server/: CalculatorImpl.java  grpcServer.java
lab6/: common.py  doctor.py  technician.py
lab7/: commands.txt  main.py  simplest_gui.py
lab7/conf1/: zoo.cfg
lab7/conf2/: zoo.cfg
lab7/conf3/: zoo.cfg
