[tool.poetry]
name = "agh-dist"
version = "0.1.0"
description = ""
authors = ["Radosław Cybulski <r.cybulski1122012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
grpcio = "^1.62.2"
grpcio-reflection = "^1.62.2"
grpcio-tools = "^1.62.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
